added working library on backed and some updates with frontend

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,11 @@
 
 
   <link rel="stylesheet" href="css/style.css" />
-  <script src="js/app.js"></script>
+  <script src="js/editor-app.js"></script>
+  
+
+  
+  <script src="js/editor-app.js"></script>
 </head>
 
 <body>
@@ -29,7 +33,7 @@
         <h4>Colors</h4>
           <div class="colorblock" ng-repeat="color in colorsArray" style="background:{{color}}" ng-click="selectColor(color)" ng-class="{'selected':color==selectedcolor}"></div>
           
-        <h4>Brushes111</h4>
+        <h4>Brushes</h4>
           <div class="sizeblock" ng-repeat="size in sizesArray" style="width:{{size}}px;height:{{size}}px" ng-click="selectSize(size)" ng-class="{'selected':size==selectedsize}"></div>
         </div>
 
@@ -67,6 +71,15 @@
         </div>
 
 
+      </div>
+    </div>
+
+
+    <div class="row upload-zone-wrapper">      
+      <div ng-app="fileUpload" ng-controller="MyCtrl">
+        ngf-accept="'image/*,application/pdf'">Drop Images or PDFs files here</div>
+        <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
+        Image thumbnail: <img ngf-src="file" ngf-default-src="'/thumb.jpg'" ngf-accept="'image/*'">
       </div>
     </div>
     
