--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="stylesheet" href="components/bootstrap-css/css/bootstrap.css" />
   
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="components/lodash/lodash.js"></script>
   <script src="components/jquery/dist/jquery.js"></script>
@@ -29,7 +30,7 @@
 <body>
   <div class="container">
 
-    <div class="row" ng-controller="canvasCont">
+    <div class="row" ng-controller="canvasCont" style="display:none;">
       <!-- RIGHT COLUMN -->
       <div class="col-md-3">
         <div class="toolbox well well-sm">
@@ -78,16 +79,25 @@
     </div>
 
 
-    <div class="row upload-zone-wrapper">      
+    <div class="row">    
+     <div class="col-md-12 upload-zone-wrapper">  
       <div ng-controller="uploadCtrl">
 
 
-  <div class="button" ngf-select ngf-change="upload($file)">Upload on file change</div>
+<!--   <div class="button" >Upload on file change</div> -->
 
 
-        <div ngf-accept="'image/*'">Drop Images or PDFs files here</div>
+        <div ngf-drop
+            ng-model="file"
+            class="drop-box" 
+          ngf-drag-over-class="dragover"
+          ngf-multiple="false"
+          ngf-allow-dir="false"
+          ngf-accept="'image/*'" 
+          ngf-select>Drop file here or click to select file</div>
         <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
         <!--Image thumbnail: <img ngf-src="file" ngf-default-src="'/thumb.jpg'" ngf-accept="'image/*'">-->
+      </div>
       </div>
     </div>
     
