added folderlist, template and refactored utils code to seperate file

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,12 @@
 
         </div>
 
+        <div class="controls well well-sm">
+          <h4>Images /h4>
+            
+
+        </div>
+
 
       </div>
     </div>
