--- a/public/editor.html
+++ b/public/editor.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
 
     <div class="row" ng-controller="canvasCont" style="display:none;">
       <!-- RIGHT COLUMN -->
