--- a/public/editor.html
+++ b/public/editor.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <script src="js/editor-app.js"></script>
+  <script src="js/app-config.js"></script>
   <script src="js/routes.js"></script>
   <script src="js/controllers/canvas-controller.js"></script>
   <script src="js/controllers/upload-controller.js"></script>
@@ -28,6 +29,7 @@
   <script src="js/services/worker-service.js"></script>
   <script src="js/directives/color-picker-directive.js"></script>
   <script src="js/directives/drawing-directive.js"></script>
+
 </head>
 
 <body>
